# protocentral_healthypi5_zephyr

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  clean.sh  cleanup_font_headers.sh  env.sh  flash.sh  flash_merged.sh  healthypi5_zephyr_display.uf2  make_all_boot.sh  make_base.sh  make_basic.sh  make_basic_ili9488.sh  make_basic_st7796.sh  make_bt.sh  make_disp.sh  make_display.sh  make_display_black.sh  make_display_ili9488.sh  make_display_st7796.sh  make_display_white.sh  make_ili9488.sh  make_logger.sh  make_st7796.sh  merge.sh  remove_image_licenses.sh  west.yml
app/: CMakeLists.txt  Kconfig  VERSION  debug.conf  healthypi5_rp2040_display.overlay  healthypi5_rp2040_display_ili9488.overlay  healthypi5_rp2040_display_st7796.overlay  healthypi5_rp2040_mcuboot.overlay  healthypi5_rp2040_sd.overlay  overlay-boot.conf  overlay-bt.conf  overlay-display-ili9488.conf  overlay-display-st7796.conf  overlay-display.conf  overlay-logger-sd.conf  overlay-no-ble.conf  overlay-op-mode-display.conf  prj.conf  sample.yaml
app/archived/arm/healthypi5_rp2040/: healthypi5_rp2040.dts  healthypi5_rp2040.yaml  healthypi5_rp2040_defconfig
app/boards/: healthypi5_rp2040.overlay
app/patches/: apply.txt  fix-fifo-85539.diff
app/src/: algos.c  algos.h  ble_module.c  ble_module.h  ble_stubs.c  cmd_module.c  cmd_module.h  data_mod_temp_arch.txt  data_module.c  data_module.h  datalog_module.c  datalog_module.h  display_module.c  display_module.h  fs_module.c  fs_module.h  hpi_common.h  hpi_common_types.h  hpi_data_service.c  hpi_zbus_channels.c  hw_module.c  hw_module.h  main.c  record_module.c  resp_process.c  resp_process.h  resp_process_module.c  rrest.c  sampling_module.c  sampling_module.h  settings_module.c  settings_module.h  spo2_process.c  spo2_process.h  spo2_process_module.c  sys_sm_module.c  usbd_init.c  usbd_init.h  vital_stats.c  vital_stats.h
app/src/archived/: screens.txt  spo2.txt
app/src/archived/images/: icon_cancel.c  icon_complete.c  icon_paused.c  logo_oneline.c
app/src/bt/: ble_module.c  ble_module.h  hpi_data_service.h
app/src/display/: display_module.c  display_module.h
app/src/ui/fonts/: bungee_90.c  caveat_48.c  font_declarations.h  fredoka_22.c  fredoka_28.c  orbitron_90px.c  oxanium_90.c  ui_font_H1.c  ui_font_Number_big.c  ui_font_Number_extra.c  ui_font_Subtitle.c  ui_font_Title.c  zen_nos_90.c
app/src/ui/images/: ecg_35.c  ecg_45.c  ecg_70.c  icon_spo2_35.c  icon_spo2_45.c  icon_spo2_70.c  img_heart_35.c  img_heart_45.c  img_heart_70.c  img_resp.c  img_resp_35.c  img_resp_45.c  img_resp_70.c  img_temp_45.c  img_temp_70.c
app/src/ui/screens/: scr_all_trends.c  scr_all_trends.h  scr_ecg.c  scr_home.c  scr_hr.c  scr_hr.h  scr_hrv_plots.c  scr_hrv_report.c  scr_poincare.c  scr_ppg.c  scr_resp.c  scr_rr.c  scr_rr.h  scr_spo2.c  (+5 more)
app/sysbuild/: mcuboot.conf  mcuboot.overlay
(+95 files in other folders)
